--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="header-content">
             <div class="header-left">
                 <img src="ITGymnewlogo.png" alt="ITGym Logo" class="header-logo">
-                <img src="ITGymSeal_v0.png" alt="ITGym Seal" class="header-seal">
+                <img src="ITGymnewlogo_v0" alt="ITGym Seal" class="header-seal">
             </div>
             <div class="header-center">
                 <h1>Welcome to IT Gym</h1>
